--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>Fly Fishing in the Mountain West, and Other Adventures</title>
+<title>Doctor Dry Fly - Fly Fishing in the Mountain West, and Other Adventures</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -58,6 +58,15 @@ ul.task-list li input[type="checkbox"] {
     "search-submit-button-title": "Submit"
   }
 }</script>
+<script async="" src="https://www.googletagmanager.com/gtag/js?id=G-9FBWPJ5ZFQ"></script>
+
+<script type="text/javascript">
+
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+gtag('config', 'G-9FBWPJ5ZFQ', { 'anonymize_ip': true});
+</script>
 
 
 <link rel="stylesheet" href="styles.css">
@@ -124,7 +133,7 @@ ul.task-list li input[type="checkbox"] {
 </section>
 <section id="western-native-trout-challenge-completed-write-up-coming-soon" class="level2">
 <h2 class="anchored" data-anchor-id="western-native-trout-challenge-completed-write-up-coming-soon">Western Native Trout Challenge (completed, write-up coming soon)</h2>
-<p>N.B.: I know it’s considered by many to be problematic to post locations of good fishing spots, but all the waters described here can be found on the state wildlife agency websites, on other personal websites, and in many youtube videos so I’m not giving away any secrets. Also, most of these spots (with a few exceptions) are not exactly blue ribbon, 20-inch fish, trout streams. The vast majority of waters I have fished, especially in Utah and Nevada, are small and brushy with small fish. I write about the Logan and other Cache Valley rivers in greater detail because these are my local fishing spots, but the Logan is already well-known as high quality fly fishing river. A google search for “Logan River fishing” shows that the first two results are from visitUtah.com and Utah.com. I hope this website provides valuable information for others interested in fly fishing and pursuing native trout challenges.</p>
+<p>N.B.: I know it’s considered by many to be problematic to post locations of good fishing spots, but all the waters described here can be found on the state wildlife agency websites, on other personal websites, and in many Youtube videos, so I’m not giving away any secrets. Also, most of these spots (with a few exceptions) are not exactly blue ribbon, 20-inch fish, trout streams. The vast majority of waters I have fished, especially in Utah and Nevada, are small and brushy with small fish. I write about the Logan and other Cache Valley rivers in greater detail because these are my local fishing spots, but the Logan is already well-known as high quality fly fishing river. A google search for “Logan River fishing” shows the first two results are from visitUtah.com and Utah.com. I hope this website provides valuable information for others interested in fly fishing and pursuing native trout challenges.</p>
 </section>
 <section id="other-adventures-coming-soon" class="level2">
 <h2 class="anchored" data-anchor-id="other-adventures-coming-soon">[Other Adventures] (coming soon)</h2>
