--- a/wyoming_cutt_slam.html
+++ b/wyoming_cutt_slam.html
@@ -58,6 +58,15 @@ ul.task-list li input[type="checkbox"] {
     "search-submit-button-title": "Submit"
   }
 }</script>
+<script async="" src="https://www.googletagmanager.com/gtag/js?id=G-9FBWPJ5ZFQ"></script>
+
+<script type="text/javascript">
+
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+gtag('config', 'G-9FBWPJ5ZFQ', { 'anonymize_ip': true});
+</script>
 
 
 <link rel="stylesheet" href="styles.css">
@@ -140,7 +149,7 @@ ul.task-list li input[type="checkbox"] {
 <p>I went back to the eastern slope of the Wyoming Range in mid-September, after my summer trip. And, just like my summer trip, I made the mistake of not going to LaBarge Creek. The reason for this is that we wanted to do a backpacking trip, and there is no backpacking along LaBarge Creek, only driving. Instead, I decided we would hike up North Piney Creek, and I assumed, like the Utah rivers I’m familiar with, that increasing elevation would increase the cutthroat to non-cutthroat ratio.</p>
 <p><img src="fishing_pics/wyoming_range_fall.JPG" class="img-fluid"> The east slope of the Wyoming Range in fall.</p>
 <p>We only had a weekend, and work delays meant we left too late on Friday. We arrived at the North Piney Creek trailhead too late in the day to get very far up the river, though I met a guy coming down the trail who had fished. He assured me he caught some cutthroats, though also gave me an ominious warning about the start of hunting season. It turned out that after hiking up the trail about two miles, we hiked directly into hunters who parked at a higher trailhead reachable on a quad or side-by-side. In other words, by going up the drainage away from the main road, we actually hiked into the crowds. We inadvertently setup camp nearly in the dark very close to a staging area. This meant we woke up at about five a.m. to the sound of quads and hunters talking. Not a great camping experience!</p>
-<p>I managed to fish for a few minutes before it got too dark and caught lots of fish. Unfortunately, they were all five inch brook trout. It’s my understanding that back East a lot of people pursue brookies and view them with reverance, but I absolutely laothe them. They don’t belong in the West, they never get that big, and they are an incredible nuisance when trying to catch native fish.</p>
+<p>I managed to fish for a few minutes before it got too dark and caught lots of fish. Unfortunately, they were all five inch brook trout. It’s my understanding that back East a lot of people pursue brookies and view them with reverance, but I absolutely loathe them. They don’t belong in the West, they never get very big, and they are an incredible nuisance when trying to catch native fish.</p>
 <p>The next morning we hiked farther up North Piney Creek, but the water got very small very quickly, and I didn’t have much fishing success. The number of hunters and off-road vehicles was a legitimate issue too as it was a total zoo in the area. I also hunt and have no moral objection to it, though I get annoyed with the use of gas-powered vehicles to cover ground in the backcountry. We decided to hike out and try our luck elsewhere. Hilariously, almost at the trailhead where we parked, and below where all the hunters drove onto the trail, there was a bull elk bugling like crazy from some pine trees.</p>
 <p>We drove from North Piney to North Cottonwood. As in the summer, my plan was to use the road along North Cottonwood to connect over to Greys River Road, then out to Alpine, and back to Cache Valley. I was also hoping that because the creek was right along a road there would be fewer hunters. That was a poor assumption. Nearly every plausible dispersed campsite was taken and we were forced to camp in what was essentially a turnout along the road. The good news is that I had all day to catch at least one cutthroat from North Cottonwood Creek, which the Wyoming Game and Fish says is “one of the state’s finest fly-fishing streams,” and one in which Colorado River cutthroat are “common.”</p>
 <p>It is definitely full of brook trout. For hours I caught dozens of them. As usual, the average size was about eight inches and it’s just not very satisfying fishing. It was getting dark and I was getting frustrated. I began to suspect that the cutthroat were deeper in the water column but I really wanted to use a dry fly to catch one. But, every cast on top of the water just brought up brooks. This is an experience I’ve had in a number of places with small but aggressive fish attacking the surface, but larger fish remaining deeper. Eventually, I think I just got lucky. I cast to an undercut bank and my dry fly got sucked under the surface, maybe only a foot, if that. I hooked a fish and it immediately looked different. I had caught my Colorado River cutt.</p>
