--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ gtag('config', 'G-9FBWPJ5ZFQ', { 'anonymize_ip': true});
   <li><a href="#utah-cutthroat-slam" id="toc-utah-cutthroat-slam" class="nav-link active" data-scroll-target="#utah-cutthroat-slam">Utah Cutthroat Slam</a></li>
   <li><a href="#wyoming-cutt-slam" id="toc-wyoming-cutt-slam" class="nav-link" data-scroll-target="#wyoming-cutt-slam">Wyoming Cutt Slam</a></li>
   <li><a href="#nevada-native-fish-slam" id="toc-nevada-native-fish-slam" class="nav-link" data-scroll-target="#nevada-native-fish-slam">Nevada Native Fish Slam</a></li>
-  <li><a href="#california-heritage-trout-challenge-in-progress-details-coming-soon" id="toc-california-heritage-trout-challenge-in-progress-details-coming-soon" class="nav-link" data-scroll-target="#california-heritage-trout-challenge-in-progress-details-coming-soon">California Heritage Trout Challenge (in progress, details coming soon)</a></li>
+  <li><a href="#california-heritage-trout-challenge" id="toc-california-heritage-trout-challenge" class="nav-link" data-scroll-target="#california-heritage-trout-challenge">California Heritage Trout Challenge</a></li>
   <li><a href="#western-native-trout-challenge-completed-write-up-coming-soon" id="toc-western-native-trout-challenge-completed-write-up-coming-soon" class="nav-link" data-scroll-target="#western-native-trout-challenge-completed-write-up-coming-soon">Western Native Trout Challenge (completed, write-up coming soon)</a></li>
   <li><a href="#other-adventures-coming-soon" id="toc-other-adventures-coming-soon" class="nav-link" data-scroll-target="#other-adventures-coming-soon">[Other Adventures] (coming soon)</a></li>
   </ul>
@@ -128,12 +128,13 @@ gtag('config', 'G-9FBWPJ5ZFQ', { 'anonymize_ip': true});
 <section id="nevada-native-fish-slam" class="level2">
 <h2 class="anchored" data-anchor-id="nevada-native-fish-slam"><a href="./nevada_fish_slam.html">Nevada Native Fish Slam</a></h2>
 </section>
-<section id="california-heritage-trout-challenge-in-progress-details-coming-soon" class="level2">
-<h2 class="anchored" data-anchor-id="california-heritage-trout-challenge-in-progress-details-coming-soon">California Heritage Trout Challenge (in progress, details coming soon)</h2>
+<section id="california-heritage-trout-challenge" class="level2">
+<h2 class="anchored" data-anchor-id="california-heritage-trout-challenge"><a href="./california_heritage_slam.html">California Heritage Trout Challenge</a></h2>
 </section>
 <section id="western-native-trout-challenge-completed-write-up-coming-soon" class="level2">
 <h2 class="anchored" data-anchor-id="western-native-trout-challenge-completed-write-up-coming-soon">Western Native Trout Challenge (completed, write-up coming soon)</h2>
 <p>N.B.: I know it’s considered by many to be problematic to post locations of good fishing spots, but all the waters described here can be found on the state wildlife agency websites, on other personal websites, and in many Youtube videos, so I’m not giving away any secrets. Also, most of these spots (with a few exceptions) are not exactly blue ribbon, 20-inch fish, trout streams. The vast majority of waters I have fished, especially in Utah and Nevada, are small and brushy with small fish. I write about the Logan and other Cache Valley rivers in greater detail because these are my local fishing spots, but the Logan is already well-known as high quality fly fishing river. A google search for “Logan River fishing” shows the first two results are from visitUtah.com and Utah.com. I hope this website provides valuable information for others interested in fly fishing and pursuing native trout challenges.</p>
+<p>I also want to note that I receive no compensation from this website, and none of the products I recommend or equipment I use are sponsored.</p>
 </section>
 <section id="other-adventures-coming-soon" class="level2">
 <h2 class="anchored" data-anchor-id="other-adventures-coming-soon">[Other Adventures] (coming soon)</h2>
