--- a/utah_cutt_slam.html
+++ b/utah_cutt_slam.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>Utah Cutthroat Slam</title>
+<title>Doctor Dry Fly - Utah Cutthroat Slam</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -58,6 +58,15 @@ ul.task-list li input[type="checkbox"] {
     "search-submit-button-title": "Submit"
   }
 }</script>
+<script async="" src="https://www.googletagmanager.com/gtag/js?id=G-9FBWPJ5ZFQ"></script>
+
+<script type="text/javascript">
+
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+gtag('config', 'G-9FBWPJ5ZFQ', { 'anonymize_ip': true});
+</script>
 
 
 <link rel="stylesheet" href="styles.css">
@@ -141,6 +150,7 @@ ul.task-list li input[type="checkbox"] {
 <section id="summary" class="level4">
 <h4 class="anchored" data-anchor-id="summary">Summary</h4>
 <p>Relative to the other state slams I’ve done or attempted, Utah was the easiest, and is a good starter slam. The driving distances are likely shorter than in Wyoming, and the fishing is pretty easy with the exception of the Yellowstone Cutt. The Bear River and Bonneville should, more or less, be gimmes, with the Colorado River somewhat tougher (though I got lucky Pine Creek was a good spot for me). Catching the Yellowstone out of Sawmill Canyon felt like a miracle, especially after having zero success in Onemile. There are other creeks listed on the DWR website that hold Yellowstones, but my impression is that they require significantly more effort to reach, or flow mostly through private land. I had a hard time figuring out access points. If I were going back, I would give myself some backup options if neither Onemile nor Sawmill worked. The most obvious seems to be Johnson Creek, which I’ve read recently is a good option, and there have been reports of anglers catching large Yellowstones from that water. It is farther from Clear Creek Campground however, and I don’t know what access is like.</p>
+<p>One additional note on Utah’s slam. Unlike every other state slam, completing the Utah slam is not free; it requires paying a fee of $20. The money is used to fund conservation projects for fish, and Utah DNR trumpets the projects they’ve compeleted with the money. I have mixed feelings about charging. I worry the fee will exclude or dissuade people who would otherwise complete the challenge, but raising money for conservation projects is undoubtedly beneficial. If we’re honest about the socio-economic status of most people who are fly fishing, I doubt the $20 is making much of a difference in whether someone decides to complete the slam. On balance then, it seems like a good idea, and other states should probably implement a similar fee.</p>
 <p><a href="./index.html">Back to Main Page</a></p>
 
 
